--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev -p 40115",
+        "dev": "next dev --turbopack",
         "build": "next build --turbopack",
         "start": "next start"
     },
