--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build --turbopack",
-        "start": "next start"
+        "start": "next start -p 3000"
     },
     "dependencies": {
         "@phosphor-icons/react": "^2.1.10",
