--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,29 +2,23 @@ name: Deploy to VPS
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up SSH
+      - uses: actions/checkout@v3
+      - name: Deploy via SSH
         uses: webfactory/ssh-agent@v0.9.1
         with:
-          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
-
-      - name: Deploy to VPS
-        run: |
-          ssh root@78.138.58.74 "
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          script: |
             cd /var/www/mds-next-pwa &&
             git pull &&
             docker build -t mds-next-pwa . &&
             docker stop mds-next-pwa || true &&
             docker rm mds-next-pwa || true &&
             docker run -d -p 3000:3000 --name mds-next-pwa --restart unless-stopped mds-next-pwa
-          "
