--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "dependencies": {
         "@phosphor-icons/react": "^2.1.10",
-        "next": "15.5.4",
+        "next": "^15.5.9",
         "react": "19.1.0",
         "react-dom": "19.1.0",
         "socket.io-client": "^4.8.1"
