--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build --turbopack",
-        "start": "next start -p 3000"
+        "start": "next start -p 3000",
+        "test": "vitest"
     },
     "dependencies": {
         "@phosphor-icons/react": "^2.1.10",
@@ -16,11 +17,17 @@
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/react": "^16.3.2",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@vitejs/plugin-react": "^4.7.0",
+        "jsdom": "^27.0.1",
         "prettier": "^3.6.2",
         "tailwindcss": "^4",
-        "typescript": "^5"
+        "typescript": "^5",
+        "vite-tsconfig-paths": "^6.0.4",
+        "vitest": "^4.0.17"
     }
 }
