--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "socket.io-client": "^4.8.1"
     },
     "devDependencies": {
+        "@playwright/test": "^1.58.0",
         "@tailwindcss/postcss": "^4",
         "@testing-library/dom": "^10.4.1",
         "@testing-library/react": "^16.3.2",
