--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev --turbopack",
         "build": "next build --turbopack",
         "start": "next start -p 3000",
-        "test": "vitest"
+        "test": "vitest",
+        "test:e2e": "playwright test"
     },
     "dependencies": {
         "@phosphor-icons/react": "^2.1.10",
